--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   mapbox_maps_flutter: ^1.1.0
   freezed_annotation: ^2.4.1
+  fast_immutable_collections: ^10.2.2
+  freezed: ^2.5.2
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +51,6 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
   build_runner: ^2.4.9
-  freezed: ^2.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
